# home-companion

./: .gitignore  Cargo.toml  Makefile
.cargo/: config.toml
connections/youless/: Cargo.toml
connections/youless/src/: lib.rs  models.rs
home-companion-sdk/: Cargo.toml
home-companion-sdk/src/: abi.rs  error.rs  lib.rs  logging.rs  memory.rs  result.rs  rpc.rs
home-companion-sdk/src/rpc/: action.rs  logging.rs
plugins/youless/: Cargo.toml
plugins/youless/src/: lib.rs
src/: cli.rs  companion.rs  engine.rs  main.rs  prelude.rs  rpc.rs  setup.rs  tracing.rs  wasm.rs
src/companion/: abi.rs  rpc.rs
src/helpers/: serde.rs
src/rpc/: logging.rs
src/wasm/: connection.rs  engine.rs  extern.rs  function.rs  instance.rs  linker.rs  logging.rs  memory.rs  module.rs  state.rs
src/wasm/linker/: logging.rs
