[workspace]
members = ["plugins/youless"]
resolver = "2"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"

[package]
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
description = "Experimental smart home assistant based on WASM plugins"
edition = "2021"
keywords = ["smart-home", "wasm"]
name = "home-companion"
version = "0.0.1"

[badges]
is-it-maintained-issue-resolution = { repository = "eigenein/home-companion" }
is-it-maintained-open-issues = { repository = "eigenein/home-companion" }

[profile.release]
lto = "fat"
codegen-units = 1

[lints]
workspace = true

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["cargo", "derive", "env"] }
dotenvy = "0.15.7"
futures = { version = "0.3.30", default-features = false, features = ["std"] }
prost = "0.12.3"
sentry = { version = "0.32.1", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
serde = "1.0.195"
tokio = { version = "1.35.1", features = ["macros", "signal"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wasmtime = { version = "16.0.0", default-features = false, features = ["cranelift", "wat", "parallel-compilation", "async", "pooling-allocator", "demangle", "addr2line"] }
