[workspace]
members = ["connections/youless", "home-companion-sdk"]
resolver = "2"

[workspace.package]
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
version = "0.0.1"

[workspace.lints.rust]
improper_ctypes = "allow"
improper_ctypes_definitions = "allow"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
future_not_send = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[package]
description = "Experimental smart home assistant based on WASM plugins"
edition = "2021"
keywords = ["smart-home", "wasm"]
name = "home-companion"
version.workspace = true

[badges]
is-it-maintained-issue-resolution = { repository = "eigenein/home-companion" }
is-it-maintained-open-issues = { repository = "eigenein/home-companion" }

[profile.release]
codegen-units = 1
debug = true
lto = "fat"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["cargo", "derive", "env"] }
derive_more = { version = "1.0.0-beta.6", features = ["as_ref", "from"] }
dotenvy = "0.15.7"
futures = { version = "0.3.30", default-features = false, features = ["std"] }
home-companion-sdk = { path = "home-companion-sdk", features = ["host"] }
prost = "0.12.3"
rmp-serde = "1.1.2"
sentry = { version = "0.32.1", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
serde = "1.0.195"
serde-transcode = "1.1.1"
tokio = { version = "1.35.1", features = ["macros", "signal"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wasmtime = { version = "16.0.0", default-features = false, features = ["cranelift", "wat", "parallel-compilation", "async", "pooling-allocator", "demangle", "addr2line"] }
