[package]
authors.workspace = true
description = "SDK for Companion modules"
edition = "2021"
name = "home-companion-sdk"
version.workspace = true

[lib]
crate-type = ["lib"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0.79"
derive_more = { version = "1.0.0-beta.6", features = ["from", "into"] }
prost = "0.12.3"
thiserror = "1.0.56"
