[package]
description = "Youless energy meter integration"
edition = "2021"
name = "connection-youless"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
prost = "0.12.3"
rmp-serde = "1.1.2"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }

