[package]
authors.workspace = true
description = "YouLess energy meter integration"
edition = "2021"
name = "connection-youless"
version.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", default-features = false }
home-companion-sdk = { path = "../../home-companion-sdk", features = ["guest"] }
prost = "0.12.3"
rmp-serde = "1.1.2"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
serde_with = { version = "3.5.0", features = ["chrono"] }
ureq = { version = "2.9.1", default-features = false, features = ["json"] }

[dev-dependencies]
serde_json = "1.0.111"
